[project]
name = "powder-hound"
version = "0.1.0"
description = "MCP server for finding ski resorts with the best snow conditions and upcoming flights"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp[cli]>=1.26",
    "httpx>=0.28",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "reverse-geocoder>=1.5.1",
]
